<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_language"
        android:icon="@drawable/ic_language"
        android:orderInCategory="100"
        android:title="@string/action_language"
        app:showAsAction="ifRoom">

        <menu>

            <item
                android:id="@+id/zh_tw"
                android:title="@string/zh_tw" />
            <item
                android:id="@+id/zh_cn"
                android:title="@string/zh_cn" />

            <item
                android:id="@+id/en"
                android:title="@string/en" />

            <item
                android:id="@+id/ja"
                android:title="@string/ja" />
            <item
                android:id="@+id/ko"
                android:title="@string/ko" />
            <item
                android:id="@+id/es"
                android:title="@string/es" />
            <item
                android:id="@+id/id"
                android:title="@string/id" />
            <item
                android:id="@+id/th"
                android:title="@string/th" />
            <item
                android:id="@+id/vi"
                android:title="@string/vi" />
        </menu>

    </item>


</menu>